--- a/app/src/main/res/layout/fragment_list_job.xml
+++ b/app/src/main/res/layout/fragment_list_job.xml
@@ -12,11 +12,15 @@
         android:text="lista de Jobs"
         tools:text="List de Jobs" />
 
-
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/lvNotes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+    <!--<ListView-->
+        <!--android:id="@+id/lvNotes"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
 
 </FrameLayout>
