--- a/app/src/main/res/layout/fragment_my_perfil.xml
+++ b/app/src/main/res/layout/fragment_my_perfil.xml
@@ -5,11 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".MyPerfilFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="meu perfil"
-        tools:text="My Perfil" />
+        android:orientation="vertical"
+        >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/perfil_nome"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/perfil_cargo"/>
+    </LinearLayout>
 
 </FrameLayout>
