--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Title"
+            android:text="Titulo"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp" />
 
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Text for Content" />
+            android:text="Descricao" />
     </LinearLayout>
 
     <LinearLayout
@@ -49,5 +49,13 @@
             android:layout_height="30dp"
             android:src="@drawable/ic_delete" />
     </LinearLayout>
+
+
+    <ImageButton
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_add_job" />
+
 
 </LinearLayout>
